--- a/grid-template.html
+++ b/grid-template.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="/index.html">Main page</a>
+    <a href="index.html">Main page</a>
     <br>
     <br>
     <div class="container">
