--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h1><a href="/grid-template.html">Template project GRID</a></h1>
-    <h1><a href="/grid-flex-template.html">Template project FLEX and Z-index</a></h1>
+    <h1><a href="grid-template.html">Template project GRID</a></h1>
+    <h1><a href="grid-flex-template.html">Template project FLEX and Z-index</a></h1>
     <br>
     <div class="parent-grid">
         <div class="child">1</div>
