--- a/grid-flex-template.html
+++ b/grid-flex-template.html
@@ -29,18 +29,18 @@
         <div class="Left">Left</div>
         <div class="Content">
             <div class="style-position">Some text here.</div>
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
-            <img src="/img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
+            <img src="./img/img_1.png" alt="houses">
         </div>
         <div class="Footer">Footer</div>
         <div class="position-btn">
