--- a/grid-template.html
+++ b/grid-template.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="index.html">Main page</a>
+    <h3><a href="index.html">Go back to start page</a></h3>
     <br>
     <br>
     <div class="container">
